--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Welcome
 ---
 <div class="blurb">
 	<h1>VITAE Experiments</h1>
-	<p>This website records all <a href="/experiments">experiments</a> conducted on <a href="https://github.com/jaydu1/VITAE">VITAE</a></p>
+	<p>This website records all <a href="/VITAE-Logs/experiments">experiments</a> conducted on <a href="https://github.com/jaydu1/VITAE">VITAE</a></p>
 </div><!-- /.blurb -->
